[package]
name = "vtashkov-bf"
version = "1.0.1"
edition = "2021"
description = "Brainfuck interpreter"
license = "MIT"
authors = ["Victor Tashkov <vtashkov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vtashkov/bf"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
